--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
+  "scripts": {
+    "start": "npx tsc && node -r ts-node/register/transpile-only -r tsconfig-paths/register build/src/index.js"
+  },
   "devDependencies": {
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.1",
     "typescript": "^4.9.4"
   }
 }
